--- a/linking-sepa-nrs-data-early-experiment/README.adoc
+++ b/linking-sepa-nrs-data-early-experiment/README.adoc
@@ -15,10 +15,11 @@ https://github.com/data-commons-scotland/dcs-shorts/blob/master/linking-sepa-nrs
 parse it, put it into a simple data structure,
 and write it to the sepa-waste-data CSV file.
 (The details of this step are in the
-https://nbviewer.jupyter.org/github/data-commons-scotland/dcs-shorts/blob/master/linking-sepa-nrs-data-early-experiment/parse-sepa-waste-data.ipynb[parse-sepa-waste-data lab book].)
-1. Fetch the National Register of Scotland’s data file about populations,
+https://nbviewer.jupyter.org/github/data-commons-scotland/dcs-shorts/blob/master/linking-sepa-nrs-data-early-experiment/linking-sepa-nrs-data-early-experiment/parse-sepa-waste-data.ipynb[parse-sepa-waste-data lab book].)
+1. Fetch the National Register of Scotland’s
+https://github.com/data-commons-scotland/dcs-shorts/blob/master/linking-sepa-nrs-data-early-experiment/mid-year-pop-est-18-time-series-2.csv[data file about populations],
 parse it, put it into a simple data structure,
-and write it to the nrs-population-data CSV file.
+and write it to the https://github.com/data-commons-scotland/dcs-shorts/blob/master/linking-sepa-nrs-data-early-experiment/nrs-population-data.csv[nrs-population-data CSV file].
 (The details of this step are in the
 https://nbviewer.jupyter.org/github/data-commons-scotland/dcs-shorts/blob/master/linking-sepa-nrs-data-early-experiment/parse-nrs-population-data.ipynb[parse-nrs-population-data lab book].)
 1. Take the datasets output from steps 1 and 2,
