--- a/linking-sepa-nrs-data-early-experiment/README.adoc
+++ b/linking-sepa-nrs-data-early-experiment/README.adoc
@@ -11,28 +11,29 @@ will be a useful learning exercise and will spark interesting ideas…
 === The steps
 
 1. Fetch the SEPA's
-https://github.com/data-commons-scotland/dcs-shorts/blob/master/linking-sepa-nrs-data-early-experiment/Household%20Waste%20Data%20Application%20-%20Scottish%20household%20waste%20generation%20and%20management%20(tonnes)%20by%20Local%20Authority.csv[data file about waste tonnes],
+link:Household%20Waste%20Data%20Application%20-%20Scottish%20household%20waste%20generation%20and%20management%20(tonnes)%20by%20Local%20Authority.csv[data file about waste tonnes],
 parse it, put it into a simple data structure,
 and write it to the sepa-waste-data CSV file.
 (The details of this step are in the
-https://nbviewer.jupyter.org/github/data-commons-scotland/dcs-shorts/blob/master/linking-sepa-nrs-data-early-experiment/parse-sepa-waste-data.ipynb[parse-sepa-waste-data lab book].)
+link:parse-sepa-waste-data.ipynb[parse-sepa-waste-data notebook].)
 1. Fetch the National Register of Scotland’s
-https://github.com/data-commons-scotland/dcs-shorts/blob/master/linking-sepa-nrs-data-early-experiment/mid-year-pop-est-18-time-series-2.csv[data file about populations],
+link:mid-year-pop-est-18-time-series-2.csv[data file about populations],
 parse it, put it into a simple data structure,
-and write it to the https://github.com/data-commons-scotland/dcs-shorts/blob/master/linking-sepa-nrs-data-early-experiment/nrs-population-data.csv[nrs-population-data CSV file].
+and write it to the
+link:nrs-population-data.csv[nrs-population-data CSV file].
 (The details of this step are in the
-https://nbviewer.jupyter.org/github/data-commons-scotland/dcs-shorts/blob/master/linking-sepa-nrs-data-early-experiment/parse-nrs-population-data.ipynb[parse-nrs-population-data lab book].)
+link:parse-nrs-population-data.ipynb[parse-nrs-population-data notebook].)
 1. Take the datasets output from steps 1 and 2,
 and add these into a triplestore to make them available as linked data.
 (The details of this step are in the
-https://nbviewer.jupyter.org/github/data-commons-scotland/dcs-shorts/blob/master/linking-sepa-nrs-data-early-experiment/populate-triplestore.ipynb[populate-triplestore lab book].)
+link:populate-triplestore.ipynb[populate-triplestore notebook].)
 1. Query the linked data in our triplestore to plot some info-graphics.
 Here is what a query over the triplestore’s facts - for the
 waste tonnage generated per council citizen per year – looks like:
 
 image::triplestore-query.png[align="center"]
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(The details of this step are in the
-https://nbviewer.jupyter.org/github/data-commons-scotland/dcs-shorts/blob/master/linking-sepa-nrs-data-early-experiment/plot-info-graphics.ipynb[plot-info-graphics lab book].)
+link:plot-info-graphics.ipynb[plot-info-graphics notebook].)
 
 === What was learnt?
 
@@ -40,12 +41,10 @@ https://nbviewer.jupyter.org/github/data-commons-scotland/dcs-shorts/blob/master
 but their mechanisms for ingesting the kind of bulk data that we are interested in,
 are piecemeal, indirect and slow – therefore unsuitable
 for our purpose of iterative experimentation with bulk data.
-Instead, I used the https://en.wikipedia.org/wiki/Comparison_of_triplestores[Datomic]
-triplestore because it is simple
+Instead, I used the https://en.wikipedia.org/wiki/Comparison_of_triplestores[Datomic] triplestore because it is simple
 and I have had some experience with it.
 (Last weekend, Ian and Bruce
-https://codethecity.org/what-we-do/hack-weekends/code-the-city-19-history-data-innovation/[coordinated an exercise]
-that involved
+https://codethecity.org/what-we-do/hack-weekends/code-the-city-19-history-data-innovation/[coordinated an exercise] that involved
 Wikidata and bulk data - its result will be very relevant for this work.)
 * The data re-structuring in steps 1, 2 & 3 - to make its information
 representable as `subject-predicate-object` facts in a triplestore – was not trivial.
